# IPerfCDN-Stats

./: 01_Ueberblick.html  01_Ueberblick.ipynb  01_Ueberblick.py  01_Ueberblick.txt  02_Geografisch.html  02_Geografisch.ipynb  02_Geografisch.py  02_Geografisch.txt  03_Zeit.html  03_Zeit.ipynb  03_Zeit.py  03_Zeit.txt  04A_Erweitert.html  04A_Erweitert.ipynb  04A_Erweitert.py  04A_Erweitert.txt  04B1_Erweitert.html  04B1_Erweitert.ipynb  04B1_Erweitert.txt  04B2_Erweitert.ipynb  04B2_Erweitert.py  04B2_Erweitert.txt  04B3_Erweitert.ipynb  04B3_Erweitert.py  04B3_Erweitert.txt  04B_Erweitert.html  04B_Erweitert.ipynb  04B_Erweitert.py  04B_Erweitert.txt  04B_Visualisierungen copy.ipynb  05A_DeepDiveGeo.ipynb  05C_DeepDiveHop.ipynb  05C_DeepDiveHop.txt  05_DeepDive.ipynb  06A_InfraRev.ipynb  06A_InfraRev.py  06A_InfraRev.txt  06C_reverse_servers.txt  docker-compose.yml  pyproject.toml
notebooks/: 01_Ueberblick.ipynb  02_Geografisch.txt  03_Zeit.txt  04A_Erweitert.txt  05B_DeepDiveAnomalie.txt  05C_DeepDiveHop.ipynb  06A_reverse_servers.txt
notebooks_alt/: 02_Geografisch.ipynb  05A_DeepDiveGeo.txt  05B_DeepDiveAnomalie.ipynb  06A_reverse_servers.ipynb  06C_reverse_servers.ipynb
src/convert/: __main__.py
src/iperfcdn_stats/: __main__.py
