[project]
name = "iperfcdn-stats"
version = "0.1.0"
description = ""
authors = [
    {name = "Kay",email = "kay.knoepfle@exxeta.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyspark (>=4.0.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "iperfcdn_stats", from = "src"}]

[project.scripts]
start = "iperfcdn_stats.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
